test/should-fail/vsgc1037.f3

/*
 * Regression test: VSGC-1037: report lexical errors 
 *
 * @test/fail
 */


class trial10 { 
    var flag: Boolean = false; 
    function f() { 
        if (! flag) { 
            flag = true; 
        } 
    } 
} 

